# hyprforest-installer

./: Cargo.toml  PKGBUILD  README.md
src/: installer.rs  main.rs
src/utils/: contents.rs  core.rs  functions.rs  helper_functions.rs  kb_layouts.rs  macros.rs  mod.rs  types.rs
