[package]
name = "hyprforest-installer"
version = "0.1.0"
authors = ["Arfan Zubi", "<zubi.arfan@gmail.com"]
license = "GNU General Public License"
description = "Hyprland Everforest theme installer for Arch Linux"
readme = "README.md"
homepage = "https://github.com/3rfaan/hyprforest-installer"
repository = "https://github.com/3rfaan/hyprforest-installer"
keywords = ["cli", "arch", "hyprland", "everforest", "installer", "theme"]
categories = ["command-line-utilities"]
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
colored = "2.0.4"
dirs = "5.0.1"
