[package]
name = "hyprforest-installer"
version = "0.1.3"
authors = ["Arfan Zubi", "<zubi.arfan@gmail.com"]
license = "GPL-3.0-or-later"
description = "Everforest Theme Installer for Hyprland on Arch Linux"
readme = "README.md"
homepage = "https://github.com/3rfaan/autoricer"
repository = "https://github.com/3rfaan/autoricer"
keywords = ["arch", "hyprland", "everforest", "installer", "theme"]
categories = ["command-line-utilities"]
edition = "2021"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
colored = "2.0.4"
dirs = "5.0.1"
once_cell = "1.18.0"
regex = "1.10.2"

[package.metadata.aur]
optdepends = ["hyprland", "kitty", "neovim", "waybar", "wofi", "zsh"]
